# OptimizedC-_Linux

./: CMakeLists.txt
03StopWatch/: CMakeLists.txt  StopWatch.h  TestStopWatch.cpp  baseTimer.h
04OptimizeString/: CMakeLists.txt  TestOptimezeString.cpp  blockAlloctor.cpp  blockAlloctor.h  fixedBlockString.h  stringFunctions.h
06DynamicVariables/: CMakeLists.txt  TestBlockCopyOperator.cpp  TestSmartPointPerformance.h  blockCopyOperator.h  testMoveExample.h
